<resources>
    <string name="app_name">Radio X</string>

    <string name="drawer_visibility">@string/drawer_info_on</string>
    <string name="drawer_info_on">0</string>
    <string name="drawer_info_off">2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="provider">com.music.movil1.provider</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="testDeviceID">9C42909A4D9D41F22AD1BDBBB8FFA52B</string>
    <string name="banner_ad_unit_id">ca-app-pub-1219685878939660/8059876837</string>

    <string name="test_admob_unit_id">ca-app-pub-1219685878939660/2375100035</string>

    <string name="facebook_app_id">130767674202797</string>
    <string-array name="chat_status1">
        <item>Online(when available)</item>`
        <item>Always Offline</item>
    </string-array>

    <string-array name="visibility_status">
        <item>Private</item>
        <item>Public</item>
    </string-array>

    <string-array name="allow_download">
        <item>Off</item>
        <item>On</item>
    </string-array>

    <string name="app_link">https://play.google.com/store/apps/details?id=com.music.movil1</string>

    <string name="more_apps">https://play.google.com/store/apps/developer?id=%F0%9F%8D%80Sekhon+Technologies%F0%9F%8D%80</string>

    <string name="about_app">A new platform for budding singers - share your music with the whole world, connect with artists, explore new content. \n\n

Upload your sounds, music, pod-casts to the world and become a renowned singer.</string>

    <string-array name="chat_status">
        <item>Always Offline</item>
        <item>Online(when available)</item>
    </string-array>

    <string-array name="profile_status">
        <item>Public</item>
        <item>Private</item>
    </string-array>


    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>

    <string-array name="CountryCodes">
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>1,CA</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>44,IM</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>1,PR</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>
    <string name="title_activity_home_">Home_Activity</string>


    <string name="activity_about_toolbar">About</string>
    <string name="xml_chat_screen_write_message">Write message....</string>
    <string name="No_Chat_Available">No Chat Available</string>
    <string name="activity_comment_Leave_comment">Leave a comment &#8230;</string>
    <string name="button_post_comment">Post</string>
    <string name="No_Comments">No Comments</string>
    <string name="Comments">Comments</string>
    <string name="Explore">Explore</string>
    <string name="Loading">Loading..</string>
    <string name="Followers">Followers</string>
    <string name="No_Followers">No Followers</string>
    <string name="No_Following">No Following</string>
    <string name="Forgot_your_password">Forgot your password ?</string>
    <string name="Forgot_Password">Forgot Password</string>
    <string name="forgot_pass_text">Fill up the below form to get access \n to your account</string>
    <string name="Email_Address">Email Address</string>
    <string name="Send">Send</string>
    <string name="Need_Help">Need Help ?</string>
    <string name="help_text">Put your registered e-mail here and click send button.The reset password link will be sent to your e-mail.</string>
    <string name="OK">OK</string>
    <string name="Friends_Activity">Friends Activity</string>
    <string name="No_Activity_Found">No Activity Found</string>
    <string name="enter_email">Please enter E-mail Address</string>
    <string name="please_try_again">Please try again !</string>
    <string name="please_wait">Please wait &#8230;</string>
    <string name="invalid_mail">Invalid Email</string>
    <string name="Help">Help</string>
    <string name="action_search">search track &#8230;</string>
    <string name="help_message">If you want to send message to your friend, first you need to follow the user and then his/her name will appear in the chat list.</string>
    <string name="Likes">Likes</string>
    <string name="No_item_in_list">No item in list</string>
    <string name="Skip">Skip</string>
    <string name="Username_Email">Username or E-mail</string>
    <string name="Password">Password</string>
    <string name="Sign_in">Sign in</string>
    <string name="dont_have_acc">Don\'t have an account ?</string>
    <string name="create_one">Create One</string>
    <string name="OR">OR</string>
    <string name="Attempts_Left">Attempts Left :</string>
    <string name="pass_field_empty">Password field empty</string>
    <string name="Message">Message</string>
    <string name="Friends">Friends</string>
    <string name="Online_Friends">Online Friends</string>
    <string name="My_Downloads">My Downloads</string>
    <string name="No_Downloads">No Downloads</string>
    <string name="Following">Following</string>
    <string name="Tracks">Tracks</string>
    <string name="About">About</string>
    <string name="EDIT">EDIT</string>
    <string name="My_Tracks">My Tracks</string>
    <string name="No_Tracks">No Tracks</string>
    <string name="wait">wait &#8230;</string>
    <string name="Notifications">Notifications</string>
    <string name="track_deleted">Track deleted successfully</string>
    <string name="main_screen">Be an Artist. Discover new tracks.
  Connect directly with your favorite artists.</string>
    <string name="no_track_found">No Track Found</string>
    <bool name="Ads_check">false</bool>


</resources>
