<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:id="@+id/scrollthree"
    android:layout_width="match_parent"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    android:background="#eee9e9"
    android:scrollbars="none">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.sekhontech.singering.Activities.Register">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarwe"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android"
            local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:background="#191C25">
        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:id="@+id/layout_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/toolbarwe"
            android:layout_marginTop="25sp"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/mic_icon"
                app:civ_border_width="2dp"
                app:civ_border_color="#d4cccc"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Forgot_your_password"
                android:textAlignment="center"
                android:layout_marginTop="10sp"
                android:textSize="22sp"
                android:textColor="#4D5059" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass_text"
                android:textAlignment="center"
                android:textColor="#4D5059"
                android:textSize="16sp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_top"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_marginTop="25sp"
            >

            <EditText
                android:id="@+id/edttxt_email_forgot"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginLeft="20sp"
                android:inputType="textEmailAddress"
                android:layout_marginRight="20sp"
                android:drawablePadding="10sp"
                android:paddingLeft="10sp"
                android:hint="@string/Email_Address"
                android:drawableLeft="@drawable/ic_email"
                android:background="@drawable/layout_bg"
                />

            <Button
                android:id="@+id/btn_send_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Send"
                android:layout_marginRight="20sp"
                android:layout_marginLeft="20sp"
                android:layout_marginTop="20sp"
                android:textColor="#A5A8B1"
                android:background="@drawable/button_round_corner"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10sp"
                android:gravity="center">

                <TextView
                    android:id="@+id/txt_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Need_Help"
                    android:textAlignment="center"
                    android:drawableLeft="@drawable/ic_help"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="#4D5059"/>

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>
</ScrollView>